plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
}

version = mod_version
group = mod_group_id
archivesBaseName = mod_id

// Forge 1.16.5 ships Java 8 to end users.
java.toolchain.languageVersion = JavaLanguageVersion.of(8)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

minecraft {
    // The mappings can be changed at any time and must be in the following format.
    // Channel:   Version:
    // official   MCVersion             Official field/method names from Mojang mapping files
    // parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
    //
    // You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
    //
    // Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
    // Additional setup is needed to use their mappings: https://parchmentmc.org/docs/getting-started
    //
    // Use non-default mappings at your own risk. They may not always work.
    // Simply re-run your setup task after changing the mappings to update your workspace.
    mappings channel: mapping_channel, version: mapping_version

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', ''
            property 'forge.logging.console.level', 'info'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', ''
            property 'forge.logging.console.level', 'info'
            args '--nogui'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run-data')
            property 'forge.logging.markers', ''
            property 'forge.logging.console.level', 'info'
            // Output to src/main/generated so recipes and loot tables are in the same folder that gets packaged into the JAR.
            args '--mod', mod_id, '--all', '--output', file('src/main/generated/'), '--existing', file('src/main/resources/'), '--existing', file('src/main/generated/')
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include api and data source sets for compilation (BiblioCraft structure).
sourceSets.main.java.srcDirs += ['src/api/java', 'src/data/java']

// Include resources generated by data generators (recipe, loot_tables, etc.). Prefer src/main/generated so runData and committed data match.
sourceSets.main.resources { srcDir 'src/main/generated'; srcDir 'src/generated/resources' }

// Copy generated data into main resources so recipes and loot tables are packaged and loaded in-game.
// Minecraft 1.16.5 loads recipes from data/<namespace>/recipes/ (plural). Datagen may output to "recipe" (singular).
// So: copy everything except the "recipe" folder, then copy that folder's contents INTO "recipes" (so the game finds them).
def copyGeneratedData = tasks.register('copyGeneratedData', Copy) {
    from('src/main/generated/data') {
        exclude '**/recipe/**'  // skip wrong path; we add the same files under "recipes" below
        exclude '**/loot_table/**'  // 1.21 singular; copy into loot_tables below
    }
    from('src/main/generated/data/bibliocraft/recipe') {
        into 'bibliocraft/recipes'  // recipe files go here so 1.16.5 loads them
    }
    from('src/main/generated/data/minecraft/recipe') {
        into 'minecraft/recipes'
    }
    from('src/main/generated/data/bibliocraft/loot_table') {
        into 'bibliocraft/loot_tables'
    }
    into('src/main/resources/data')
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    onlyIf { file('src/main/generated/data').exists() }
}
tasks.named('processResources').configure { dependsOn copyGeneratedData }

repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://www.cursemaven.com" }

    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html#sub:flat_dir_resolver
    // flatDir {
    //     dir 'libs'
    // }
}

dependencies {
    // Specify the version of Minecraft to use.
    // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
    // The "userdev" classifier will be requested and setup by ForgeGradle.
    // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
    // then special handling is done to allow a setup of a vanilla dependency without an external repository.
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // JEI: compile against the API; optional at runtime (not required to load this mod).
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}:api")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")

    // Jade 1.16.4-2.8.3 (CurseForge file ${jade_file_id}); optional HUD for runClient / packaged env.
    runtimeOnly fg.deobf("curse.maven:jade-324717:${jade_file_id}")
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    // 1.16.5 loads from data/.../recipes/ (plural); exclude singular data/.../recipe/ so JAR only has recipes/
    exclude '**/data/bibliocraft/recipe/**', '**/data/minecraft/recipe/**', '**/data/bibliocraft/loot_table/**'
    def replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    from sourceSets.main.output
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    // This is the preferred method to reobfuscate your jar file
    finalizedBy 'reobfJar'
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
    options.compilerArgs += ['-Xmaxerrs', '100000']
}
